<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Weather</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please verify that the internet connection is available and try again.</string>
    <string name="error_ok_button_text">OK</string>
    <string name="network_unavailable_message">Network is unavailable!</string>
    <string name="open_intertet_settings">Do you want to open the internet settings or close the app?</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_daily_forecast_data">There is no data to display.</string>
    <string name="getting_current_city">Getting  current city...</string>
    <string name="humidity">HUMIDITY</string>
    <string name="rain">RAIN/SNOW?</string>
    <string name="getting_current_weather">Getting current weather...</string>
    <string name="hourly">HOURLY</string>
    <string name="daily">7 DAY</string>
    <string name="daily_summary" formatted="false">On %s the high will be %s and it will be \"%s\".</string>
    <string name="today">Today</string>
    <string name="weather_of_the_week">This Week\'s Weather</string>
    <string name="next_24_hours">Next 24 hours</string>
    <string name="today_msg">At #TIME it will be #TEMP and #SUMMARY</string>
    <string name="time_msg">At #TIME it will be</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="address_not_available">Address not available</string>
    <string name="city_not_available">City not available</string>
    <string name="country_not_available">Country not available</string>
    <string name="postal_code_not_available">Postal code not available</string>
</resources>